@@ -6,7 +6,7 @@ import com.sparta.lafesta.common.s3.entity.FileOnS3;
 import com.sparta.lafesta.common.s3.entity.ReviewFileOnS3;
 import com.sparta.lafesta.common.s3.repository.ReviewFileRepository;
 import com.sparta.lafesta.festival.entity.Festival;
-import com.sparta.lafesta.festival.service.FestivalServiceImpl;
+import com.sparta.lafesta.festival.service.FestivalService;
 import com.sparta.lafesta.like.reviewLike.entity.ReviewLike;
 import com.sparta.lafesta.like.reviewLike.repository.ReviewLikeRepository;
 import com.sparta.lafesta.review.dto.ReviewRequestDto;
@@ -17,6 +17,7 @@ import com.sparta.lafesta.review.repostiroy.ReviewRepository;
 import com.sparta.lafesta.user.entity.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionTemplate;
@@ -25,14 +26,13 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ReviewServiceImpl implements ReviewService {
     //CRUD
     private final ReviewRepository reviewRepository;
-    private final FestivalServiceImpl festivalService;
+    private final FestivalService festivalService;
 
     //S3
     private final S3UploadService s3UploadService;
@@ -77,11 +77,11 @@ public class ReviewServiceImpl implements ReviewService {
     // 리뷰 전체 조회
     @Override
     @Transactional(readOnly = true)
-    public List<ReviewResponseDto> selectReviews(Long festivalId, User user) {
+    public List<ReviewResponseDto> selectReviews(Long festivalId, User user, Pageable pageable) {
         // user 권한 확인 예외처리 추후 추가 작성 예정
         Festival festival = festivalService.findFestival(festivalId);
-        return reviewRepository.findAllByFestivalOrderByCreatedAtDesc(festival).stream()
-                .map(ReviewResponseDto::new).collect(Collectors.toList());
+        return reviewRepository.findAllByFestival(festival, pageable).stream()
+                .map(ReviewResponseDto::new).toList();
     }
 
     // 리뷰 상세 조회
@@ -180,6 +180,7 @@ public class ReviewServiceImpl implements ReviewService {
     }
 
     // 리뷰 id로 리뷰 찾기
+    @Override
     public Review findReview(Long reviewId) {
         return reviewRepository.findById(reviewId).orElseThrow(() ->
                 new IllegalArgumentException("선택한 리뷰는 존재하지 않습니다.")
